--- a/templates/hubbasic2013/html/com_resources/resources.css
+++ b/templates/hubbasic2013/html/com_resources/resources.css
@@ -2,7 +2,7 @@
 
 /* Tabbed view containers */
 	.com_resources .upperpane {
-		padding: 30px;
+		padding: 10px 30px 30px 30px;
 		background: #fff;
 		border-bottom: 1px dotted #e4e4e4;
 	}
